7atyt footer kharj l container

--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -779,10 +779,13 @@ header{
 /* about us */
 #about{
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: flex-start;
+    margin: 0 auto;
     margin-bottom: 194px;
-    width: 100%;
+    margin-left: 177px;
+    width: 75%;
+    
 }
 .about-us{
     display: flex;
@@ -811,6 +814,7 @@ header{
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
+    margin-left: 615px;
 }
 .hc a{
     text-decoration: none;
@@ -890,6 +894,3 @@ header{
     margin-right: 0;
 }
 /* hero 5 (end) */
-/* font face  */
-
-/* font face */
