--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -12,7 +12,8 @@
 }
 body {
     background-color: rgb(19,21,27);
-    overflow-x: hidden
+    overflow-x: hidden;
+    overflow: hidden;
 }
 
 /* header style start */
@@ -26,6 +27,8 @@ header{
     height: 88px;
     padding: 0 46px;
     background-color: rgb(23,25,32);
+    z-index: 4;
+    position: relative;
 }
 /* nav bar */
 .nav-bar {
@@ -910,6 +913,37 @@ header{
     margin-right: 0;
 }
 /* hero 5 (end) */
+
+/* login panel */
+
+.panel{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    backdrop-filter: blur(6px);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+#login-panel{
+    position: absolute;
+    top: 137px;
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    z-index: 3;
+    width: 443px;
+    height: 579px;
+    background: #181A22;
+    border-radius: 15px;
+    margin: auto;
+}
 
 @media (min-width: 1920px) {
     #imgs2{
