--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -932,7 +932,7 @@ header{
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    backdrop-filter: blur(9px);
+    backdrop-filter: blur(5px);
 }
 #login-panel{
     display: none;
@@ -993,7 +993,7 @@ header{
 }
 .logo-l{
     margin-bottom: 48px;
-    margin-top: 51px;
+    /* margin-top: 51px; */
 }
 .form{
     display: flex;
@@ -1033,7 +1033,7 @@ header{
     position: relative;
     left: -6px;
 }
-#x{
+.xx{
     width: 40px;
     height: 40px;
     color: #171920;
@@ -1042,7 +1042,7 @@ header{
     cursor: pointer;
     display: none;
     z-index: 100;
-    bottom: 424px;
+    /* bottom: 424px; */
 }
 .input-b img {
     position: relative;
