--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -1469,6 +1469,83 @@ header{
         margin-top: 67px;
     }
 }
+/* nav bar mobile  */
+#icon{
+    display: none;
+    margin-right: 12px;
+    font-size: 24px;
+    text-align: center;
+}
+#navmobile{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%
+}
+#navmobile ul{
+    list-style-type: none;
+    text-align: center;
+    background-color: #1C1E27;  
+    width: 100%;
+    height: 100vh;
+}
+#navmobile ul li{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 20%;
+}
+#navmobile ul li:hover{
+    background-color: rgb(23,25,32);
+}
+#navmobile ul li a{
+    text-decoration: none;
+    text-decoration: none;
+    font-family: 'Panton';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 35px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #434652;
+}
 @media (max-width:656px) {
-    
+    .b-container {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .left-menu-1, .left-menu-2{
+        margin-left: 0;
+        width: 80%;
+    }
+    .left-menu-2{
+        margin-bottom: 50px;
+    }
+    .s1 {
+        justify-content: center;
+        width: 100%;
+        margin-right: 0;
+    }
+    .s2{
+        align-items: center;
+    }
+    .lmc {
+        width: 90%;
+    }
+    .lmc-h {
+        width: 100%;
+    }
+    #slideshow{
+        width: 90%;
+    }
+    .socialmedia a{
+        width: 16%;
+    }
+    .nav-bar{
+        display: none;
+    }
+    #icon{
+        display: inline;
+    }
 }
