--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -927,7 +927,7 @@ header{
     margin: auto;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -952,10 +952,11 @@ header{
     /* transform: translate(-50%, -50%); */
     z-index: 3;
     width: 443px;
-    height: 640px;
+    height: 680px;
     background: #181A22;
     border-radius: 15px;
     margin: auto;
+    padding-bottom: 84px;
 }
 #login-panel h3,#registre-panel h3{
     font-family: 'Barlow';
@@ -993,7 +994,10 @@ header{
 }
 .logo-l{
     margin-bottom: 48px;
-    /* margin-top: 51px; */
+    margin-top: 17px;
+}
+.logo-l-s{
+    margin-top: 0;
 }
 .form{
     display: flex;
@@ -1084,14 +1088,14 @@ header{
     line-height: 17px;
     color: #5570F1;
     left: 129px;
-    top: -23px;
+    top: -16px;
 }
 .signup-l{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-bottom: 27px;
+    margin-bottom: 51px;
 }
 .signup-l p{
     text-decoration: none;
