--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -950,6 +950,9 @@ header{
     top: 111px;
     /* left: 50%; */
     /* transform: translate(-50%, -50%); */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 3;
     width: 443px;
     height: 680px;
